.provarCaches/00Df2000001KKNJEA4/objects/Incapsulate_Log__LogglySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for logging to Loggly from Salesforce</description>
    <fields>
        <fullName>Incapsulate_Log__Endpoint__c</fullName>
        <description>The loggly HTTPS endpoint</description>
        <inlineHelpText>This can be obtained by creating an HTTP endpoint in loggly and using the generated URL http://wiki.loggly.com/wiki:start</inlineHelpText>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Hostname__c</fullName>
        <description>The hostname to display.  This field will display in your loggly payload for filtering.</description>
        <inlineHelpText>The hostname to display.  This field will display in your loggly payload for filtering.</inlineHelpText>
        <label>Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Include_Hostname__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the hostname should be included in the payload.</description>
        <inlineHelpText>If the hostname should be included in the payload.</inlineHelpText>
        <label>Include Hostname</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Include_Userinfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user info should be included in the payload</description>
        <inlineHelpText>If user info should be included in the payload</inlineHelpText>
        <label>Include Userinfo</label>
        <type>Checkbox</type>
    </fields>
    <label>Loggly</label>
</CustomObject>